# life-coach-agent

./: .gitignore  README.md  main.py  pyproject.toml
docs/: sample-life-coach-record.txt
